<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/size_16"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_15">

        <RelativeLayout
            android:id="@+id/dialog_rating_button_feedback_cancel"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/dialog_circle_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_close" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/dialog_rating_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_rate_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_rating_button_feedback_cancel" />

        <TextView
            android:id="@+id/dialog_rating_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/feedback_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_rating_icon" />

        <EditText
            android:id="@+id/dialog_rating_feedback"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/size_3"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/size_3"
            android:background="@drawable/editext"
            android:gravity="top|left"
            android:hint="@string/feedback_hint_text"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColorHint="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_rating_feedback_title" />

        <RelativeLayout
            android:id="@+id/dialog_rating_button_feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_marginTop="30dp"
            android:background="#FF0EA47E"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_rating_feedback">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textStyle="bold"
                android:text="@string/rating_dialog_submit"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/white" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>